add 2 portfolio projects

--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -3,8 +3,8 @@ main:
   - title: "About Me"
     url: /about/
 
-  - title: "Posts"
-    url: https://mmistakes.github.io/minimal-mistakes/year-archive/
+  # - title: "Posts"
+  #url: https://mmistakes.github.io/minimal-mistakes/year-archive/
 
   - title: "Projects"
     url: /portfolio/
