--- a/_config.yml
+++ b/_config.yml
@@ -62,7 +62,7 @@ google_ad_slot           :
 # Site Author
 author:
   name             : "stevegocoding"
-  avatar           : "bio-photo.jpg"
+  avatar           : "http://www.gravatar.com/avatar/5d9d17bcf4983a1131d736a206142e56?s=150"
   bio              : "Programming | Life"
   location         : "Toronto, Canada"
   email            : "stevegocoding@gmail.com"
