--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@
 
 # Site Settings
 locale                   : "en-US"
-title                    : "Steve's Personal Page"
+title                    : "Think  Deliver"
 title_separator          : "-"
 name                     : "Steve Shi"
 description              : "An amazing website."
@@ -62,7 +62,7 @@ google_ad_slot           :
 # Site Author
 author:
   name             : "stevegocoding"
-  avatar           : "http://www.gravatar.com/avatar/5d9d17bcf4983a1131d736a206142e56?s=170"
+  avatar           : "http://www.gravatar.com/avatar/5d9d17bcf4983a1131d736a206142e56?s=150"
   bio              : "Programming | Life"
   location         : "Toronto, Canada"
   email            : "stevegocoding@gmail.com"
@@ -215,7 +215,19 @@ defaults:
     values:
       layout: single
       author_profile: false
-      share: true
+      share: false
+
+  # _posts
+  - scope:
+      path: ""
+      type: posts
+    values:
+      layout: single
+      author_profile: false
+      read_time: true
+      comments: true
+      share: false
+      related: false
       
 collections:
   portfolio:
