--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@
 
 # Site Settings
 locale                   : "en-US"
-title                    : "Think  Deliver"
+title                    : "Think & Deliver"
 title_separator          : "-"
 name                     : "Steve Shi"
 description              : "An amazing website."
